// Vitest Snapshot v1

exports[`Button Component > props.block works fine 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary t-size-full-width"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.block works fine 2`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.content works fine 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </span>
</button>
`;

exports[`Button Component > props.default works fine 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </span>
</button>
`;

exports[`Button Component > props.disabled works fine 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary t-is-disabled"
  disabled="disabled"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.disabled works fine 2`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.ghost works fine 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary t-button--ghost"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.ghost works fine 2`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.href works fine 1`] = `
<a
  class="t-button t-button--variant-base t-button--theme-primary"
  href="https://tdesign.tencent.com/"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</a>
`;

exports[`Button Component > props.loading works fine 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary t-is-loading"
  disabled="disabled"
  type="button"
>
  <div
    class="t-loading--center t-size-m t-loading--inherit-color t-loading"
  >
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      size="medium"
      version="1.1"
      viewBox="0 0 12 12"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="0"
        y="0"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
  </div>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.loading works fine 2`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.loading: Button contains element \`.t-loading\` 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary t-is-loading"
  disabled="disabled"
  type="button"
>
  <div
    class="t-loading--center t-size-m t-loading--inherit-color t-loading"
  >
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      size="medium"
      version="1.1"
      viewBox="0 0 12 12"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="0"
        y="0"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
  </div>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.shape is equal to circle 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary t-button--shape-circle"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.shape is equal to rectangle 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.shape is equal to round 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary t-button--shape-round"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.shape is equal to square 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary t-button--shape-square"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.size is equal to large 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary t-size-l"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.size is equal to medium 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.size is equal to small 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary t-size-s"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.tag is equal to a 1`] = `
<a
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</a>
`;

exports[`Button Component > props.tag is equal to button 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.tag is equal to div 1`] = `
<div
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</div>
`;

exports[`Button Component > props.theme is equal to danger 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-danger"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.theme is equal to default 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-default"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.theme is equal to primary 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.theme is equal to success 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-success"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.theme is equal to warning 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-warning"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.variant is equal to base 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.variant is equal to dashed 1`] = `
<button
  class="t-button t-button--variant-dashed t-button--theme-default"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.variant is equal to outline 1`] = `
<button
  class="t-button t-button--variant-outline t-button--theme-default"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > props.variant is equal to text 1`] = `
<button
  class="t-button t-button--variant-text t-button--theme-default"
  type="button"
>
  <span
    class="t-button__text"
  >
    Text
  </span>
</button>
`;

exports[`Button Component > slots.content works fine 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </span>
</button>
`;

exports[`Button Component > slots.default works fine 1`] = `
<button
  class="t-button t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </span>
</button>
`;
